...
    func confirmDiscardingChanges(for window: NSWindow?, completionHandler handler: @escaping (NSApplication.ModalResponse) -> Void) {
        let alert = NSAlert()
        alert.informativeText = "Your changes will be lost if you don't save them."
        alert.messageText = "Do you want to save the changes you made to New file?"
        alert.alertStyle = .warning
        alert.addButton(withTitle: "Save")
        alert.addButton(withTitle: "Cancel")
        alert.addButton(withTitle: "Don't Save")
        if let window {
            alert.beginSheetModal(for: window, completionHandler: handler)
        } else {
            handler(.cancel)
        }
    }
...
