...
    @objc var navigation: WKNavigation?
    private var visibleRect = NSRect.zero

    override func viewDidLoad() {
        super.viewDidLoad()
        replacePreviewWebViewWithLockedDownConfiguration()
        view.setAccessibilityIdentifier("PreviewPane")
        view.setAccessibilityElement(true)
        view.setAccessibilityRole(.group)
        webView.setAccessibilityIdentifier("PreviewWebView")
        NotificationCenter.default.addObserver(
            self,
            selector: #selector(didChangeContentNotification(_:)),
...
