import Cocoa

@objc(AppDelegate)
class AppDelegate: NSObject, NSApplicationDelegate {
    private static let repositoryURLString = "https://github.com/vjanelle/Draftmark"

    private var storedMainWindowController: NSWindowController?
    private var pendingOpenFilename: String?
    @objc var settingsWindowController: SettingsWindowController?

    @objc var mainWindowController: NSWindowController? {
...
